--- a/index.html
+++ b/index.html
@@ -63,22 +63,22 @@
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <img src="./images/PD.jpg" width="270" height="260" alt="Игорь Демьяненко">
+                <img src="./images/pd.jpg" width="270" height="260" alt="Игорь Демьяненко">
                 <h3>Игорь Демьяненко</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="./images/FD-2.jpg" width="270" height="260" alt="Ольга Репина">
+                <img src="./images/fd-2.jpg" width="270" height="260" alt="Ольга Репина">
                 <h3>Ольга Репина</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="./images/M-3.jpg" width="270" height="260" alt="Николай Тарасов">
+                <img src="./images/m-3.jpg" width="270" height="260" alt="Николай Тарасов">
                 <h3>Николай Тарасов</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./images/UI-4.jpg" width="270" height="260" alt="Михаил Ермаков">
+                <img src="./images/ui-4.jpg" width="270" height="260" alt="Михаил Ермаков">
                 <h3>Михаил Ермаков</h3>
                 <p>UI Designer</p>
             </li>
