--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
         <h3>Чем мы занимаемся</h3>
         <ul>
             <li>
-                <img src="./images/img.png" alt="разработчик" width="370" height="294">
+                <img src="./images/img.jpg" alt="разработчик" width="370" height="294">
             </li>
             <li>
-                <img src="./images/img-2.png" alt="тефон" width="370" height="294">
+                <img src="./images/img-2.jpg" alt="тефон" width="370" height="294">
             </li>
             <li>
-                <img src="./images/img-3.png" alt="шестиугольник" width="370" height="294">
+                <img src="./images/img-3.jpg" alt="шестиугольник" width="370" height="294">
             </li>
         </ul>
     </section>
