--- a/index.html
+++ b/index.html
@@ -68,17 +68,17 @@
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="./images/fd-2.jpg" width="270" height="260" alt="Ольга Репина">
+                <img src="./images/fd.jpg" width="270" height="260" alt="Ольга Репина">
                 <h3>Ольга Репина</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="./images/m-3.jpg" width="270" height="260" alt="Николай Тарасов">
+                <img src="./images/m.jpg" width="270" height="260" alt="Николай Тарасов">
                 <h3>Николай Тарасов</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./images/ui-4.jpg" width="270" height="260" alt="Михаил Ермаков">
+                <img src="./images/ui.jpg" width="270" height="260" alt="Михаил Ермаков">
                 <h3>Михаил Ермаков</h3>
                 <p>UI Designer</p>
             </li>
