--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <img src="./images/pd.jpg" width="270" height="260" alt="Игорь Демьяненко">
+                <img src="./images/product.jpg" width="270" height="260" alt="Игорь Демьяненко">
                 <h3>Игорь Демьяненко</h3>
                 <p>Product Designer</p>
             </li>
